# reno-arg-ai-api

./: .env  Dockerfile  README.md  autopsia_db.py  docker-compose.yml  pyproject.toml  requirements.txt  sync_models.py
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py
app/api/v1/endpoints/: __init__.py  admin.py  analisis.py  health.py  usuarios.py
app/config/: models_registry.py  settings.py
app/core/: __init__.py  config.py  exceptions.py  security.py
app/core/logging/: __init__.py  config.py  setup.py
app/core/security/: __init__.py  context.py  utils.py
app/core/settings/: __init__.py  base.py  validators.py
app/core/utils/: enums.py
app/crud/: __init__.py  analisis.py  crud_analisis.py  llm.py  queries.py  snapshot.py  webhook.py
app/db/: __init__.py  async_.py  base.py  database.py  health.py  sync.py
app/models/: __init__.py  ai_process.py  analisis.py  analysis.py  auditoria.py  auth.py  core.py  datos.py  enums.py  operaciones.py  results.py  snapshot.py
app/routers/: __init__.py  analisis.py
app/schemas/: __init__.py  analisis.py  enums.py  nested.py  responses.py  results.py  snapshot.py  user.py
app/services/: __init__.py  ai_engine.py  analisis_service.py  llm_client.py  prompt_builder.py  webhook_client.py
app/utils/: __init__.py  hashing.py  helpers.py  logger.py  mappers.py
